# cadence

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS.md  setup.ps1  setup.sh
apps/cadence-desktop/: index.html  package-lock.json  package.json
apps/cadence-desktop/src/: App.css  App.tsx  LibraryManager.tsx  main.rs
apps/cadence-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/cadence-desktop/src-tauri/src/: lib.rs  main.rs  websocket.rs
apps/cadence-desktop/src/components/ui/: slider.tsx
apps/cadence-desktop/src/hooks/: usePlayback.ts
apps/cadence-mobile/: app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
apps/cadence-mobile/.expo/: devices.json
apps/cadence-mobile/app/: _layout.tsx  index.tsx
apps/cadence-mobile/hooks/: useDesktopSync.ts  useDiscovery.ts
apps/cadence-mobile/types/: react-native-zeroconf.d.ts
core/cadence-core/: Cargo.toml
core/cadence-core/src/: lib.rs  library.rs
tools/cadence-cli/: Cargo.toml
tools/cadence-cli/src/: main.rs
