[package]
name = "cadence-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rodio = { version = "0.20", features = ["symphonia-all"] }
symphonia = "0.5"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
lofty = "0.22"
walkdir = "2"
